tests/baselines/reference/plusOperatorInvalidOperations.errors.txt
tests/cases/conformance/expressions/unaryOperators/plusOperator/plusOperatorInvalidOperations.ts(5,17): error TS1109: Expression expected.
tests/cases/conformance/expressions/unaryOperators/plusOperator/plusOperatorInvalidOperations.ts(8,15): error TS1109: Expression expected.


==== tests/cases/conformance/expressions/unaryOperators/plusOperator/plusOperatorInvalidOperations.ts (2 errors) ====
    // Unary operator +
    var b;
    
    // operand before +
    var result1 = b+;   //expect error
                    ~
!!! error TS1109: Expression expected.
    
    // miss  an operand
    var result2 =+;
                  ~
!!! error TS1109: Expression expected.